arreglo de producto sin stock singular

--- a/views/admin/home.hbs
+++ b/views/admin/home.hbs
@@ -56,7 +56,7 @@
         </div>
 
         <div class="col-md-3 mb-3">
-            <button id="abrir-caja-btn" class="btn btn-primary w-100" {{#unless (eq userRole 'admin' )}}disabled{{/unless}}>
+            <button id="abrir-caja-btn" class="btn btn-secondary w-100" {{#unless (eq userRole 'admin' )}}disabled{{/unless}}>
                 <img src="/icons/abrir-caja.png" alt=""> Abrir Caja
             </button>            
         </div>
