--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -36,8 +36,10 @@
 
         <div class="form-group row">
             <div class="col-md-6">
-                <button type="button" id="buscar-btn" class="btn btn-primary mt-2"> <img src="/icons/buscar.png" alt=""> Buscar Producto</button>
-                <button type="button" id="buscar-combo-btn" class="btn btn-warning mt-2"> <img src="/icons/buscar-combo.png" alt=""> Buscar Combo</button>
+                <button type="button" id="buscar-btn" class="btn btn-primary mt-2"> <img src="/icons/buscar.png" alt="">
+                    Buscar Producto</button>
+                <button type="button" id="buscar-combo-btn" class="btn btn-warning mt-2"> <img
+                        src="/icons/buscar-combo.png" alt=""> Buscar Combo</button>
             </div>
         </div>
 
@@ -58,7 +60,7 @@
                 <input type="text" class="form-control" id="cod_barra" name="cod_barra">
             </div>
         </div>
-        
+
 
         <table class="table mt-3">
             <thead>
@@ -77,12 +79,14 @@
             </tbody>
         </table>
         <div class="text-center">
-            <button type="button" id="confirmar-venta-btn" class="btn btn-success mt-2" style="display:none;"> <img src="/icons/confirmacion.png" alt=""> Confirmar
+            <button type="button" id="confirmar-venta-btn" class="btn btn-success mt-2" style="display:none;"> <img
+                    src="/icons/confirmacion.png" alt=""> Confirmar
                 Venta</button>
         </div>
     </form>
     <div class="mt-5">
-        <a href="/admin/home" class="btn btn-success"> <img src="/icons/flecha-hacia-atras.png" alt=""> Ir a Pagina Pricipal</a>
+        <a href="/admin/home" class="btn btn-success"> <img src="/icons/flecha-hacia-atras.png" alt=""> Ir a Pagina
+            Pricipal</a>
     </div>
 </div>
 
@@ -214,7 +218,8 @@
                             agregarProductoATabla(product);
                             this.value = '';
                         } else {
-                            alert('Producto o combo no encontrado');
+                            const errorData = await response.json();
+                            alert(errorData.message || 'Producto o combo no encontrado');
                         }
                     }
                 } catch (error) {
