cambio de color index

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -34,6 +34,7 @@
                 <td>
                     <a href="/products/{{this.cod_barra}}/edit" class="btn btn-info">Editar</a>
                     <button onclick="deleteProduct('{{this.cod_barra}}')" class="btn btn-danger">Eliminar</button>
+                    <a href="/productHistory/{{this.cod_barra}}" class="btn btn-warning">Historial de Producto</a>
                 </td>
             </tr>
             {{/each}}
