correccion de venta acumuladas

--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -45,9 +45,10 @@
         <button type="button" class="btn btn-success" data-bs-toggle="modal" id="cancel-btn"> <img
                 src="/icons/flecha-hacia-atras.png" alt=""> Ir a Inicio</button>
 
-        <button type="button" class="btn btn-danger" style="margin-left: 35%;" id="cerrarCajaBtn"> <img src="/icons/cerrar-caja.png" alt="">
+        <button type="button" class="btn btn-danger" style="margin-left: 35%;" id="cerrarCajaBtn"> <img
+                src="/icons/cerrar-caja.png" alt="">
             Cerrar Caja</button>
-        
+
     </div>
 
 
@@ -117,7 +118,7 @@
                                 name="retiro_transferencia" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Procesar</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Atrás</button>
                     </form>
                 </div>
             </div>
