--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -23,8 +23,10 @@
             <input type="number" class="form-control" id="precio_venta" name="precio_venta" required>
         </div>
         <div class="mt-3 text-center mt-5">
-            <button type="submit" class="btn btn-primary"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar</button>
-            <button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
+            <button type="submit" class="btn btn-primary"> <img src="/icons/guardar-el-archivo.png" alt="">
+                Guardar</button>
+            <button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt="">
+                Atrás</button>
         </div>
     </form>
 </div>
