--- a/views/products.hbs
+++ b/views/products.hbs
@@ -45,7 +45,7 @@
 <a href="/newProduct" class="btn btn-success">Crear Nuevo Producto</a>
 <div>
     <a href="/sales" class="btn btn-success">Ir a Ventas</a>
-    <a href="/admin/home" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Cancelar</a>
+    <a href="/admin/home" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Atrás</a>
 </div>
 <script>
     async function deleteProduct(codigoDeBarras) {
