--- a/views/register.hbs
+++ b/views/register.hbs
@@ -20,9 +20,11 @@
                 <input class="form-check-input" type="checkbox" id="admin" name="role" value="admin">
                 <label class="form-check-label" for="admin">Es Administrador</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-3"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar Cambios</button>
+            <button type="submit" class="btn btn-primary mt-3"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar
+                Cambios</button>
         </form>
-        <button type="button" class="btn btn-danger mt-3" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
+        <button type="button" class="btn btn-danger mt-3" id="cancel-btn"> <img src="/icons/cancelar.png" alt="">
+            Atrás</button>
     </div>
 </div>
 
