--- a/views/reportes.hbs
+++ b/views/reportes.hbs
@@ -31,7 +31,7 @@
             <img src="/icons/excel.png" alt=""> Exportar a Excel
         </a>
         <a href="/admin/home" class="btn btn-danger">
-            <img src="/icons/cancelar.png" alt=""> Cancelar
+            <img src="/icons/cancelar.png" alt=""> Atrás
         </a>
         <a href="/cerrar-reporte" class="btn btn-warning" id="closeReportsBtn">
             <img src="/icons/excel.png" alt=""> Cerrar Reportes
