--- a/views/users.hbs
+++ b/views/users.hbs
@@ -26,7 +26,7 @@
         </tbody>
     </table>
 </div>
-<button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Cancelar</button>
+<button type="button" class="btn btn-danger" id="cancel-btn"> <img src="/icons/cancelar.png" alt=""> Atrás</button>
 
 <script>
     document.getElementById('cancel-btn').addEventListener('click', function () {
