--- a/views/viewCombo.hbs
+++ b/views/viewCombo.hbs
@@ -18,9 +18,10 @@
     </table>
 
     <div class="mt-4 mb-3 text-center">
-        <a href="/admin/home" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Cancelar</a>
+        <a href="/admin/home" class="btn btn-danger"> <img src="/icons/cancelar.png" alt=""> Atrás</a>
         <!-- Botón para guardar todos los cambios realizados en todos los combos -->
-        <button type="button" class="btn btn-primary" id="saveAllCombosBtn"> <img src="/icons/guardar-el-archivo.png" alt=""> Guardar</button>
+        <button type="button" class="btn btn-primary" id="saveAllCombosBtn"> <img src="/icons/guardar-el-archivo.png"
+                alt=""> Guardar</button>
     </div>
 </div>
 
