--- a/views/viewSales.hbs
+++ b/views/viewSales.hbs
@@ -35,7 +35,7 @@
                         <button type="submit" class="btn btn-danger">Anular Venta</button>
                         {{/if}}
                     </form>
-                    
+
                 </td>
             </tr>
             {{/each}}
@@ -44,7 +44,7 @@
 
     <div class="volver" id="pie-view-sales">
         <a href="/sales" class="btn btn-primary">Ir a Ventas</a>
-        <a href="/admin/home" class="btn btn-danger">Cancelar</a>
+        <a href="/admin/home" class="btn btn-danger">Atrás</a>
     </div>
 </div>
 
@@ -70,5 +70,3 @@
 
 
 {{>footer}}
-
-
