--- a/views/editProduct.hbs
+++ b/views/editProduct.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group text-center">
             <button type="button" onclick="updateProduct()" class="btn btn-primary mt-5">Guardar Cambios</button>
-            <button type="button" onclick="cancelEdit()" class="btn btn-danger mt-5">Cancelar</button>
+            <button type="button" onclick="cancelEdit()" class="btn btn-danger mt-5">Atrás</button>
         </div>
     </form>
 </div>
@@ -64,9 +64,9 @@
         }
     }
 
-        function cancelEdit() {
-            window.location.href = '/products'; // Redirigir a la lista de productos
-        }
+    function cancelEdit() {
+        window.location.href = '/products'; // Redirigir a la lista de productos
+    }
 </script>
 
 {{>footer}}
