--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -26,7 +26,7 @@
             </div>
             <button type="submit" class="btn btn-primary mt-3">Actualizar Usuario</button>
         </form>
-        <button type="button" class="btn btn-danger mt-3" id="cancel-btn">Cancelar</button>
+        <button type="button" class="btn btn-danger mt-3" id="cancel-btn">Atrás</button>
     </div>
 </div>
 
